<resources>
    <string name="app_name">MovieHuB</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv">TV</string>
    <string name="title">Movie Title</string>
    <string name="title_quiz">Quiz</string>
    <string name="dash_heading">Discover, Enjoy, and Share: Your Ultimate Movie &amp; TV Show .</string>
    <string name="trending">Trending </string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="popular_movie">Popular Movies </string>
    <string name="popular_tv">Popular Tv Show</string>
    <string name="upcoming">Upcoming Movies</string>
    <string name="now_playing">Now Playing Movies</string>
    <string name="top_rated">Top Rated Tv Shows</string>
    <string name="sub_title">Sub-Title</string>
    <string name="rate">8.5</string>
    <string name="overview">Overview</string>
    <string name="director">Director:</string>
    <string name="writer">Writer: </string>
    <string name="spoken_language">Spoken Languages: </string>
    <string name="status">Status:</string>
    <string name="release_date">Release Date:</string>
    <string name="runtime">Runtime:</string>
    <string name="top_cast">Top Cast</string>
    <string name="recommendations">Recommendations</string>
    <string name="similar">Similar</string>
    <string name="genres">Genres: </string>
    <string name="genres_item">action | comedy </string>
    <string name="explore">Explore</string>
    <string name="explore_mv">Explore Movies</string>
    <string name="explore_tv">Explore Tv Shows</string>
    <string name="airing_today">Airing Today</string>
    <string name="on_the_air">On The Air Tv</string>
    <string name="rating">Ratings</string>
    <string name="search">Search</string>
    <string name="search_res">Search Results Not Found</string>
    <string name="watchlist">Watchlist</string>
    <string name="cast_name">John Doe</string>
    <string name="cast_character">Character Name</string>
    <string name="profile">Profile</string>
    <string name="your_watchlist_movie">Your Watchlist Movies</string>
    <string name="your_watchlist_tv">Your Watchlist Tv</string>
    <string name="your_fav">Your Favourite</string>
    <string name="fav">Favourite</string>
    <string name="quiz_content">Welcome to the Ultimate Movie Quiz! Test your film knowledge by guessing the name of the movie or TV show from the poster. Are You Ready?</string>
    <string name="start">Start</string>
    <string name="write_here">Write Here....</string>
    <string name="correct">You are Awesome to guess. Want to Try more?</string>
    <string name="incorrect">Oops Wrong. Try Next ! </string>
    <string name="c_answer">Correct Answer is :</string>
    <string name="image">Image</string>
    <string name="video">Videos</string>
    <string name="sel_genres">Select Genres</string>
    <string name="sort_by">Sort By</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="new_pass">New Password</string>
    <string name="forget_pass">Forget Password?</string>
    <string name="name">Name</string>
    <string name="phone_no">Phone No.</string>
    <string name="c_pass">Confirm Password</string>
    <string name="reset_pass">Reset Password</string>
    <string name="save">Save</string>
    <string name="required">*Required</string>
    <string name="account_sign_in">Already have an Account? Sign In</string>
    <string name="account_sign_up">Don\'t have an Account? Sign Up</string>
    <string name="sort_one">Release Date Ascending</string>
    <string name="sort_two">Release Date Descending</string>
    <string name="sort_three">Popularity Ascending</string>
    <string name="sort_four">Popularity Descending</string>
    <string name="sort_five">Rating Ascending</string>
    <string name="sort_six">Rating Descending</string>
    <string name="no_network">No Internet Connection</string>
    <string name="connect_network">Please connect to your network to continue.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_watchlist">WatchlistActivity</string>
    <string name="action_settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="write_answer_here">Write Answer Here....</string>
    <string name="next">Next</string>
</resources>