<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_quiz"
    android:padding="@dimen/_10sdp"
    tools:context=".fragments.quiz.QuizFragment"
    android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/left_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_quiz" />

            <TextView
                android:id="@+id/middle_text"
                android:layout_width="0dp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/MediumText" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/right_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_win" />

                <TextView
                    android:id="@+id/text_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ScoreText"
                    android:padding="@dimen/_1sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:background="@drawable/score_design"
                    android:text="0" />

            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:id="@+id/quiz_ques_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/quiz_image"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_250sdp"
            android:scaleType="fitCenter"
            android:src="@drawable/quiz_banner" />

        <EditText
            android:id="@+id/answer_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            style="@style/QuizText"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:hint="@string/write_answer_here"
            android:background="@drawable/quiz_et_design" />

        <Button
            android:id="@+id/submit_button"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_gravity="center"
            android:paddingHorizontal="@dimen/_40sdp"
            android:text="@string/submit" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/quiz_info_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/quiz_banner"
            android:layout_width="wrap_content"
            android:scaleType="fitCenter"
            android:layout_height="wrap_content"
            android:src="@drawable/quiz_wallpaper" />
        <TextView
            android:id="@+id/quiz_content"
            style="@style/MediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_content" />

        <Button
            android:id="@+id/button_start"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_gravity="center"
            android:paddingHorizontal="@dimen/_40sdp"
            android:text="@string/start" />
    </LinearLayout>
        <LinearLayout
            android:id="@+id/quiz_result_correct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone"
            android:padding="@dimen/_10sdp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image_correct"
                android:layout_width="wrap_content"
                android:scaleType="fitCenter"
                android:layout_height="@dimen/_200sdp"
                android:src="@drawable/correct_answer" />
            <TextView
                android:id="@+id/text_correct"
                style="@style/MediumText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/correct" />

            <Button
                android:id="@+id/button_next"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_gravity="center"
                android:paddingHorizontal="@dimen/_40sdp"
                android:text="@string/next" />

               </LinearLayout>
        <LinearLayout
            android:id="@+id/quiz_result_wrong"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone"
            android:padding="@dimen/_10sdp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_wrong"
                android:layout_width="wrap_content"
                android:scaleType="fitCenter"
                android:layout_height="@dimen/_200sdp"
                android:src="@drawable/wrong" />
            <TextView
                style="@style/MediumText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/incorrect" />

            <TextView
                style="@style/MediumText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c_answer" />

            <TextView
                android:id="@+id/correct_answer_text"
                style="@style/MediumText"
                android:textColor="@color/yellow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_again"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_gravity="center"
                android:paddingHorizontal="@dimen/_40sdp"
                android:text="@string/next" />
        </LinearLayout>
</LinearLayout>
